# coinquantification

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
backtest/: __init__.py  engine.py  report.py
config/: __init__.py  settings.py  settings.yaml
data/: __init__.py
data/feed/: __init__.py  data_feed.py
data/store/: __init__.py  data_store.py
docs/plans/: crypto-quant-mvp-spec.md
execution/: __init__.py  dry_run.py  order_manager.py
execution/adapters/: __init__.py  base.py  binance_adapter.py  hyperliquid_adapter.py
monitoring/: __init__.py  alert.py  logger.py
risk/: __init__.py  allocation.py  engine.py
security/: __init__.py  key_manager.py
strategy/: __init__.py  base.py
strategy/examples/: __init__.py  bollinger_breakout.py  dual_ma.py
tests/unit/: test_backtest.py  test_config.py  test_data_store.py  test_risk.py  test_security.py
